Added best friend prediction

--- a/graph_based_db.ipynb
+++ b/graph_based_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,20 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "988"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_test = df_test[df_test[\"url\"] != \"http://adressa.no\"]\n",
     "user_df = df_test.groupby(['userId']).size().reset_index(name='counts')\n",
@@ -67,21 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict all users on popularity\n",
-    "start_time = time.time()\n",
-    "predictions_raw_df = db.predict_on_popularity(users, None)\n",
-    "predictions_raw_df.to_feather(\"predictions_raw_all_users_v2.feather\")\n",
-    "logging.info(f\"Prediction took: {((time.time() - start_time)/60.0)} minutes, or hours: {((time.time() - start_time)/3600.0)}\")\n",
+    "#start_time = time.time()\n",
+    "#predictions_raw_df = db.predict_on_popularity(users, None)\n",
+    "#predictions_raw_df.to_feather(\"predictions_raw_all_users_v2.feather\")\n",
+    "#logging.info(f\"Prediction took: {((time.time() - start_time)/60.0)} minutes, or hours: {((time.time() - start_time)/3600.0)}\")\n",
     "# NB: Prediction took: 739.2234967947006 minutes, or hours: 12.320391614834467"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -104,24 +93,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction matching train data: predictions in test data / train data: 1.6521739130434783\n"
+      "Prediction matching train data: predictions in test data / train data: 4.286527312762838e-05\n"
      ]
     }
    ],
    "source": [
     "# Recommender recall, 10 predictions per user, for all users, on popularity\n",
     "predictions = pd.read_feather(\"predictions_raw_all_users.feather\")\n",
-    "df_train_url = df_train[[\"userId\", \"url\"]]\n",
-    "df_train_url = df_train_url[df_train_url[\"userId\"].isin(predictions[\"userId\"])]\n",
-    "df_train_url = df_train_url[df_train_url[\"url\"].isin(predictions[\"url\"])]\n",
-    "print(f\"Prediction matching train data: predictions in test data / train data: {len(predictions)/len(df_train_url)}\")"
+    "df_test_url = df_test[[\"userId\", \"url\"]]\n",
+    "df_test_url = df_test_url[df_test_url[\"userId\"].isin(predictions[\"userId\"])]\n",
+    "df_test_url = df_test_url[df_test_url[\"url\"].isin(predictions[\"url\"])]\n",
+    "print(f\"Prediction matching train data: predictions in test data / train data: {len(df_test_url)/len(df_train)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "predictions = db.predict_on_bestfriends_newest(users)\n",
+    "predictions.to_feather(\"predictions_on_best_friend_all_users.feather\")\n",
+    "logging.info(f\"Prediction on bestfriend took: {((time.time() - start_time)/60.0)} minutes, or hours: {((time.time() - start_time)/3600.0)}\")\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "predictions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction matching test data: predictions in test data / test data: 3208/9660=0.3320910973084886\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = pd.read_feather(\"predictions_on_best_friend_all_users.feather\")\n",
+    "df_test_url = df_test[[\"userId\", \"url\"]]\n",
+    "df_test_url = df_test_url[df_test_url[\"userId\"].isin(predictions[\"userId\"])]\n",
+    "df_test_url = df_test_url[df_test_url[\"url\"].isin(predictions[\"url\"])]\n",
+    "print(f\"Prediction matching test data: predictions in test data / test data: {len(df_test_url)}/{len(predictions)}={len(df_test_url)/len(predictions)}\")"
    ]
   }
  ],
