--- a/graph_based_db.ipynb
+++ b/graph_based_db.ipynb
@@ -264,7 +264,7 @@
     "# Predict all users on popularity (uncomment to run)\n",
     "start_time = time.time()\n",
     "#predictions_raw_df = db.predict_on_popularity(users, None) # NB: runs for ~1 hours\n",
-    "#predictions_raw_df.to_feather(\"predictions_popularity_all_users_v4.feather\")\n",
+    "#predictions_raw_df.to_feather(\"predictions_popularity_all_users.feather\")\n",
     "logging.info(f\"Prediction took: {((time.time() - start_time)/60.0)} minutes, or hours: {((time.time() - start_time)/3600.0)}\")\n"
    ]
   },
@@ -299,6 +299,7 @@
    "source": [
     "# Evaluating: 20 predictions per user, for all users, on popularity\n",
     "predictions_popularity = pd.read_feather(\"predictions_popularity_all_users_v4.feather\")\n",
+    "#predictions_popularity = pd.read_feather(\"predictions_popularity_all_users.feather\")\n",
     "precision_popularity = precision_per_user(predictions_popularity, df_test)\n",
     "precision_popularity.hist()"
    ]
@@ -500,7 +501,7 @@
     "# Prediction all users. Finding similar users and recommend their newest read articles\n",
     "start_time = time.time()\n",
     "# predictions = db.predict_on_bestfriends_newest(users) # NB this wil run for ~1 Hour\n",
-    "# predictions.to_feather(\"predictions_on_best_friend_all_users_v4.feather\")\n",
+    "# predictions.to_feather(\"predictions_on_best_friend_all_users.feather\")\n",
     "logging.info(f\"Prediction on bestfriend took: {((time.time() - start_time)/60.0)} minutes, or hours: {((time.time() - start_time)/3600.0)}\")\n",
     "pd.set_option('display.max_colwidth', None)\n"
    ]
@@ -534,7 +535,8 @@
     }
    ],
    "source": [
-    "predictions_newest = pd.read_feather(\"predictions_on_best_friend_all_users_v4.feather\")\n",
+    "predictions_newest = pd.read_feather(\"predictions_on_best_friend_all_users.feather\")\n",
+    "# predictions_newest = pd.read_feather(\"predictions_on_best_friend_all_users_v4.feather\")\n",
     "precision_newest = precision_per_user(predictions_newest, df_test)\n",
     "precision_newest.hist()"
    ]
